k8s/mservice/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-webapp
spec:
  #Defines which pods are going to be reprensented by this service.
  selector: 
    damonxApp: webapp
  ports:
    - name: http
      port: 80
      nodePort: 30080
        
  type: NodePort   
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-queue
spec:
  #Defines which pods are going to be reprensented by this service.
  selector: 
    damonxApp: queue
  ports:
    - name: http
      port: 8161
      nodePort: 30010
    - name: endpoint
      port: 61616
        
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-position-tracker
spec:
  #Defines which pods are going to be reprensented by this service.
  selector: 
    damonxApp: position-tracker
  ports:
    - name: http
      port: 8080
      
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-api-gateway
spec:
  #Defines which pods are going to be reprensented by this service.
  selector: 
    damonxApp: api-gateway
  ports:
    - name: http
      port: 8080

  type: ClusterIP
